src/testFunctional/testData/org/intellij/xquery/annotator/duplicateFunction/IncompleteFunction.xq
<error descr="'test' is already defined in 'IncompleteFunction.xq'">declare function local:test()</error> {
""
};

<error descr="'test' is already defined in 'IncompleteFunction.xq'">declare function local:test</error><EOLError descr="'(' expected, got '''"></EOLError>

''